Prepare pow-server for public release and GitHub bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 .clang-format
 # ci build directory
 /build
+
+# local runtime state
+/.DS_Store
+/logs/
+/*.log
+
+# local service/editor files
+*.pid
+*.swp
