--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   osx_job:
-    runs-on: macOS-latest
+    runs-on: macOS-13
     steps:
       - uses: actions/checkout@722adc63f1aa60a57ec37892e133b1d319cae598
       - name: Checkout Submodules
@@ -19,7 +19,7 @@ jobs:
         run: ci/actions/build.sh
 
   linux_job:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@722adc63f1aa60a57ec37892e133b1d319cae598
       - name: Checkout Submodules
